--- a/app/css/style.css
+++ b/app/css/style.css
@@ -168,50 +168,8 @@ html, body, #map {
     left: 66px;
 }
 
-.esriSignInDialog {
-    background-color: #fafafa;
-    border-radius: 2px;
-    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3);
-}
-
-.esriSignInDialog>.dijitDialogPaneContentArea {
-    /*background-color: white;*/
-}
-
-.esriSignInDialog>*>form {
-    /*background-color: black;*/
-    margin: 20px;
-}
-
-.esriSignInDialog .dijitValidationContainer {
-    display: none;
-}
-
-.esriSignInDialog .dijitDialogTitleBar {
-    display: none;
-}
-
-.esriSignInDialog .dijitToggleButtonIconChar {
-    display: none;
-}
-
-.esriSignInDialog .dijitOffScreen {
-    display: none;
-}
-
-.esriSignInDialog .dijitButtonContents {
-    /*background-color: #ccc;*/
-    border-radius: 10px;
-    padding: 10px 18px 10px 18px;
-    margin-left: 0px;
-    text-transform: uppercase;
-}
-
-.esriSignInDialog .dijitButtonContents:hover {
-    transition: .3s ease-out;
-    will-change: opacity, transform;
-    background-color: rgba(0, 0, 0, 0.1);
-    cursor: pointer;
+.ol-scale-line {
+  background-color: rgba(38, 166, 154, 0.5);
 }
 
 #legendDiv .esriLegendLayerLabel {
@@ -262,7 +220,7 @@ html, body, #map {
     width: auto;
     position: absolute;
     left: 60px;
-    bottom: 18px;
+    bottom: 37px;
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3);
     height: 25px;
