--- a/app/css/style.css
+++ b/app/css/style.css
@@ -261,3 +261,41 @@ html, body, #map {
 .dijitMenuItemLabel {
     left: 5px;
 }
+
+/**
+ * The zoomslider in the second map shall be placed between the zoom-in and
+ * zoom-out buttons.
+ * link: https://openlayers.org/en/latest/examples/zoomslider.html
+ */
+#map .ol-zoom .ol-zoom-out {
+  margin-top: 204px;
+}
+#map .ol-zoomslider {
+  background-color: transparent;
+  top: 2.3em;
+}
+
+#map .ol-touch .ol-zoom .ol-zoom-out {
+  margin-top: 212px;
+}
+#map .ol-touch .ol-zoomslider {
+  top: 2.75em;
+}
+
+#map .ol-zoomslider.desplegado {
+  margin-left: 470px;
+}
+
+#map .ol-zoomslider {
+  margin-left: 53px;
+}
+
+#map .ol-zoom-in.ol-has-tooltip:hover [role=tooltip],
+#map .ol-zoom-in.ol-has-tooltip:focus [role=tooltip] {
+  top: 3px;
+}
+
+#map .ol-zoom-out.ol-has-tooltip:hover [role=tooltip],
+#map .ol-zoom-out.ol-has-tooltip:focus [role=tooltip] {
+  top: 232px;
+}
