Se termina leyenda de WMS

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -282,6 +282,10 @@ html, body, #map {
   top: 2.75em;
 }
 
+#map .sidebar-pane.active .ol-zoomslider.desplegado {
+  display: none;
+}
+
 #map .ol-zoomslider.desplegado {
   margin-left: 470px;
 }
