--- a/app/css/style.css
+++ b/app/css/style.css
@@ -165,11 +165,11 @@ html, body, #map {
 }
 
 .ol-popup-closer:after {
-    content: "✖";
+  content: "✖";
 }
 
 #popup-content p {
-    line-height: 1px;
+  line-height: 1px;
 }
 
 #map_zoom_slider {
@@ -323,34 +323,49 @@ html, body, #map {
   top: 232px;
 }
 
+
 /**
  * utiliza CSS para reubicar elementos
  */
 
-.sidebar-left ~ .sidebar-map .ol-zoomslider {
-  margin-left: 46px; }
-  @media (min-width: 768px) {
-    .sidebar-left ~ .sidebar-map .ol-zoomslider {
-      transition: margin-left 500ms; } }
-  @media (min-width: 768px) and (max-width: 991px) {
-    .sidebar-left ~ .sidebar-map .ol-zoomslider {
-      margin-left: 317px; } }
-  @media (min-width: 992px) and (max-width: 1199px) {
-    .sidebar-left ~ .sidebar-map .ol-zoomslider {
-      margin-left: 402px; } }
-  @media (min-width: 1200px) {
-    .sidebar-left ~ .sidebar-map .ol-zoomslider {
-      margin-left: 472px; } }
+.sidebar-left~.sidebar-map .ol-zoomslider {
+  margin-left: 46px;
+}
 
 @media (min-width: 768px) {
-  .sidebar-left.collapsed ~ .sidebar-map .ol-zoomslider {
-    margin-left: 52px; } }
+  .sidebar-left~.sidebar-map .ol-zoomslider {
+    transition: margin-left 500ms;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .sidebar-left~.sidebar-map .ol-zoomslider {
+    margin-left: 317px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .sidebar-left~.sidebar-map .ol-zoomslider {
+    margin-left: 402px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .sidebar-left~.sidebar-map .ol-zoomslider {
+    margin-left: 472px;
+  }
+}
+
+@media (min-width: 768px) {
+  .sidebar-left.collapsed~.sidebar-map .ol-zoomslider {
+    margin-left: 52px;
+  }
+}
+
 
 /*end*/
 
-.item-leyenda-wms-title {
-
-}
+.item-leyenda-wms-title {}
 
 .item-leyenda-wms-content {
   background-color: rgb(255, 255, 255);
@@ -362,10 +377,49 @@ html, body, #map {
   background-color: rgba(200, 200, 200, 0.1);
 }
 
-#resultadosDiv .collapsible-body p{
+#resultadosDiv .collapsible-body p {
   padding: 10px;
 }
 
 .resultadoIdentificar {
   margin: 10px;
+}
+
+
+/*Measure styles*/
+
+.tooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+}
+
+.tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+
+.tooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid white;
+}
+
+.tooltip-measure:before, .tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+
+.tooltip-static:before {
+  border-top-color: #ffcc33;
 }
