--- a/app/css/style.css
+++ b/app/css/style.css
@@ -202,12 +202,21 @@ html, body, #map {
   box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3);
 }
 
+#toc-div ul.collection {
+  /*Para problemas con Select*/
+  overflow: visible;
+}
+
 #toc-div ul.collection>li {
   min-height: 60px;
 }
 
 #toc-div ul.collection>li p {
   padding: 0;
+}
+
+#toc-div li.toc-layer-filters {
+  height: 100px;
 }
 
 #leyenda ul.collection>li {
