Se resuelven estilos, se configura extent inicial, se cambia orden capa y se agrega zona?exxterior, no funcional..

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -241,9 +241,9 @@ html, body, #map {
   display: block;
   width: 20px;
   height: 20px;
-  position: relative;
-  right: -300px;
-  top: -33px;
+  float: right;
+  margin-top: -31px;
+  margin-right: 8px;
 }
 
 .esriPopup .sizer {
