--- a/app/css/generalReport.css
+++ b/app/css/generalReport.css
@@ -5,15 +5,17 @@
 }
 
 .tabs .tab a {
-  color: rgba(65, 226, 72, 0.7);
+  color: #9e9e9e;
 }
 
 .tabs .tab a:hover {
-  color: rgba(65, 187, 226, 0.7);
+  color: #eee;
+  background-color: rgba(38, 166, 154, 1);
 }
 
 .tabs .tab a.active {
   color: rgb(0, 0, 0);
+  background-color: rgba(38, 166, 154, 0.5);
 }
 
 .tabs .indicator {
